Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2721,9 +2721,11 @@ input, select, textarea {
 /* Main */
 
 	#main {
+		margin-left: auto;
+    	margin-right: auto;
 		max-width: 54em;
 		padding: 8em 4em 4em 4em;
-		width: 100%;
+		width: calc(100% - 35%);
 	}
 
 		#main > section {
